@@ -1,3 +1,7 @@
+2015-02-05  Doug Evans  <xdje42@gmail.com>
+
+	* guile/scm-frame.c: Fix spelling errors in a comment.
+
 2015-02-04  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* python/python-internal.h (Py_hash_t): Define it for Python <3.2.
